--- a/template.css
+++ b/template.css
@@ -1,3 +1,16 @@
 .navbar {
     margin-bottom: 10px;
 }
+
+.card {
+    margin: 1px;
+}
+
+.info_svg {
+    position:absolute;
+    top: 5px;
+    right: 5px;
+    height: 15px;
+    width: 15px;
+    margin: 2px;
+}
