new template using popovers instead of tooltips

--- a/template.css
+++ b/template.css
@@ -21,6 +21,20 @@
     width: 15px;
     margin: 2px;
 }
+
+.button {
+    background-image: url(info-button.svg);
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    border: none;
+    position:absolute;
+    top: 5px;
+    right: 5px;
+    height: 15px;
+    width: 15px;
+    margin: 2px;
+}
+
 h4{ 
     text-transform: uppercase;
     text-align: center;  
