--- a/template.css
+++ b/template.css
@@ -26,6 +26,7 @@
     background-image: url(info-button.svg);
     background-repeat: no-repeat;
     background-size: 100% auto;
+    background-color: transparent;
     border: none;
     position:absolute;
     top: 5px;
