--- a/template.css
+++ b/template.css
@@ -100,7 +100,7 @@ h4{
     margin-left:auto; 
     margin-right:auto;
 }
-
+/* 
 #KPItable {
     border-collapse: collapse;
     border-spacing: 0;
@@ -111,7 +111,7 @@ h4{
     letter-spacing: 0.15em;
     margin-left:auto; 
     margin-right:auto;
-}
+} */
 
 #KPI1table thead th {
     border-bottom: solid 2px #E15183;
@@ -128,6 +128,7 @@ h4{
     text-align: left;
     text-shadow: 1px 1px 1px #fff;
 }
+
 
 #KPI3table thead th {
     border-bottom: solid 2px #1d48c0;
