--- a/template.css
+++ b/template.css
@@ -12,7 +12,9 @@
     margin: 1px;
     background-color: #E6E7E9;
 }
-
+#home{
+    color: rgb(168, 168, 168);
+}
 .button {
     background-image: url(images/info-button.svg);
     background-repeat: no-repeat;
@@ -100,18 +102,11 @@ h4{
     margin-left:auto; 
     margin-right:auto;
 }
-/* 
-#KPItable {
-    border-collapse: collapse;
-    border-spacing: 0;
-    font-family: "Open Sans", sans-serif;
-    text-transform: uppercase;
-    text-align: center;  
-    font-weight: bolder;
-    letter-spacing: 0.15em;
-    margin-left:auto; 
-    margin-right:auto;
-} */
+.KPItable tbody td {
+    color: #333;
+    padding: 10px;
+    text-shadow: 1px 1px 1px #fff;
+}
 
 #KPI1table thead th {
     border-bottom: solid 2px #E15183;
@@ -137,8 +132,11 @@ h4{
     text-align: left;
     text-shadow: 1px 1px 1px #fff;
 }
-.KPItable tbody td {
-    color: #333;
+
+#KPI6table thead th {
+    border-bottom: solid 2px #ee3f36;
+    color:  #a10587;
     padding: 10px;
+    text-align: left;
     text-shadow: 1px 1px 1px #fff;
 }
