--- a/alt_template.css
+++ b/alt_template.css
@@ -136,12 +136,13 @@ h4{
     color: rgb(168, 168, 168);
 }
 
+
 .site-footer {
-  background-color: #26272b;
+  background-color: #3e3e3f;
   padding: 45px 0 20px;
   font-size: 15px;
   line-height: 24px;
-  color: #737373;
+  color: rgb(168, 168, 168);
 }
 .site-footer hr {
   border-top-color: #bbb;
@@ -161,7 +162,7 @@ h4{
   color: #737373;
 }
 .site-footer a:hover {
-  color: #3366cc;
+  color: #F7931D;
   text-decoration: none;
 }
 .footer-links {
@@ -177,7 +178,7 @@ h4{
 .footer-links a:active,
 .footer-links a:focus,
 .footer-links a:hover {
-  color: #3366cc;
+  color: #F7931D;
   text-decoration: none;
 }
 .footer-links.inline li {
@@ -212,61 +213,8 @@ h4{
     text-align: center;
   }
 }
-.social-icons {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-}
-.social-icons li {
-  display: inline-block;
-  margin-bottom: 4px;
-}
-.social-icons li.title {
-  margin-right: 15px;
-  text-transform: uppercase;
-  color: #96a2b2;
-  font-weight: 700;
-  font-size: 13px;
-}
-.social-icons a {
-  background-color: #eceeef;
-  color: #818a91;
-  font-size: 16px;
-  display: inline-block;
-  line-height: 44px;
-  width: 44px;
-  height: 44px;
-  text-align: center;
-  margin-right: 8px;
-  border-radius: 100%;
-  -webkit-transition: all 0.2s linear;
-  -o-transition: all 0.2s linear;
-  transition: all 0.2s linear;
-}
-.social-icons a:active,
-.social-icons a:focus,
-.social-icons a:hover {
-  color: #fff;
-  background-color: #29aafe;
-}
-.social-icons.size-sm a {
-  line-height: 34px;
-  height: 34px;
-  width: 34px;
-  font-size: 14px;
-}
-.social-icons a.facebook:hover {
-  background-color: #3b5998;
-}
-.social-icons a.twitter:hover {
-  background-color: #00aced;
-}
-.social-icons a.linkedin:hover {
-  background-color: #007bb6;
-}
-.social-icons a.dribbble:hover {
-  background-color: #ea4c89;
-}
+
+
 @media (max-width: 767px) {
   .social-icons li.title {
     display: block;
@@ -274,4 +222,7 @@ h4{
     font-weight: 600;
   }
 }
+
+
+
 
