--- a/template.css
+++ b/template.css
@@ -132,6 +132,20 @@ h4{
     text-align: left;
     text-shadow: 1px 1px 1px #fff;
 }
+#KPI4table thead th {
+    border-bottom: solid 2px #a10587;
+    color:  #1d48c0;
+    padding: 10px;
+    text-align: left;
+    text-shadow: 1px 1px 1px #fff;
+}
+#KPI5table thead th {
+  border-bottom: solid 2px #0C6638;
+  color:  #ee3f36;
+  padding: 10px;
+  text-align: left;
+  text-shadow: 1px 1px 1px #fff;
+}
 
 #KPI6table thead th {
     border-bottom: solid 2px #ee3f36;
@@ -140,6 +154,21 @@ h4{
     text-align: left;
     text-shadow: 1px 1px 1px #fff;
 }
+.separate{
+  padding:45px
+}
+
+.img {
+  height: auto; 
+  width: auto; 
+  /* max-width: 100%;
+  max-height: 100%; */
+}
+
+#uploadWindow{
+  padding-left: 10px;
+}
+
 
 .site-footer {
     background-color: #3e3e3f;
@@ -227,4 +256,5 @@ h4{
     }
   }
   
+ 
   
