--- a/alt_template.css
+++ b/alt_template.css
@@ -90,7 +90,22 @@ h4{
       border: none;
      }
 
-  .KPItable{
+.colour-change2 {
+      background-color: Transparent;
+      font-family: "Open Sans", sans-serif;
+      color: rgb(62,62,63);
+      padding: .55em;
+      border: none;
+    }
+  
+  .colour-change2:hover {
+      background-color: Transparent;
+      color: rgb(247,147,29);
+      padding: .55em;
+      border: none;
+    }
+
+.KPItable{
       border-collapse: collapse;
       border-spacing: 0;
       font-family: "Open Sans", sans-serif;
@@ -162,6 +177,9 @@ h4{
     color: rgb(168, 168, 168);
 }
 
+#uploadWindow{
+  padding-left: 10px;
+}
 
 .site-footer {
   background-color: #3e3e3f;
