--- a/alt_template.css
+++ b/alt_template.css
@@ -62,19 +62,19 @@ h4{
       text-shadow: 1px 1px 1px #fff;
   }
   
-#KPI4_title{
-      color: #004D40;
-      text-shadow: 1px 1px 1px #fff;
-  }
+  #KPI4_title{
+    color: #F7931D;
+    text-shadow: 1px 1px 1px #fff;
+}
 #KPI5_title{
-      color: #F7931D;
-      text-shadow: 1px 1px 1px #fff;
-  }
+    color: #004D40;
+    text-shadow: 1px 1px 1px #fff;
+}
 #KPI6_title{
-      color: #3E3E3F;
-      text-shadow: 1px 1px 1px #fff;
-  }
-  
+    color: #3E3E3F;
+    text-shadow: 1px 1px 1px #fff;
+}
+
 .colour-change {
       background-color: Transparent;
       font-family: "Open Sans", sans-serif;
@@ -142,29 +142,30 @@ h4{
       text-shadow: 1px 1px 1px #fff;
 }
   
-#KPI4table thead th {
-    border-bottom: solid 2px #FFC107;
-    color:  #D81B60;
-    padding: 10px;
-    text-align: left;
-    text-shadow: 1px 1px 1px #fff;
-}
   
+#KPI4table thead th {
+  border-bottom: solid 2px #D81B60;
+  color:  #F7931D;
+  padding: 10px;
+  text-align: left;
+  text-shadow: 1px 1px 1px #fff;
+}
+
 #KPI5table thead th {
-    border-bottom: solid 2px #1E88E5;
-    color:  #FFC107;
-    padding: 10px;
-    text-align: left;
-    text-shadow: 1px 1px 1px #fff;
+  border-bottom: solid 2px #FFC107;
+  color:  #004D40;
+  padding: 10px;
+  text-align: left;
+  text-shadow: 1px 1px 1px #fff;
 }
 
 
 #KPI6table thead th {
-    border-bottom: solid 2px #FFC107;
-    color:  #D81B60;
-    padding: 10px;
-    text-align: left;
-    text-shadow: 1px 1px 1px #fff;
+  border-bottom: solid 2px #004D40;
+  color:  #3E3E3F;
+  padding: 10px;
+  text-align: left;
+  text-shadow: 1px 1px 1px #fff;
 }
 
 .KPItable tbody td {
